--- a/meanautapp/angular-src/src/app/components/navbar/navbar.component.html
+++ b/meanautapp/angular-src/src/app/components/navbar/navbar.component.html
@@ -10,6 +10,8 @@
         <li class="nav-item"><a class="nav-link" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" [routerLink]="['/']">Home</a></li>
         <li class="nav-item"><a class="nav-link" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" [routerLink]="['/login']">Login</a></li>
         <li class="nav-item"><a class="nav-link" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" [routerLink]="['/register']">Register</a></li>
+        <!-- Logout event (# means nowhere) -->
+        <li class="nav-item"><a class="nav-link"(click)="onLogoutClick()" href="#">Logout</a></li>
         </ul>
     </div>
     </div>
