--- a/meanautapp/angular-src/src/app/components/profile/profile.component.html
+++ b/meanautapp/angular-src/src/app/components/profile/profile.component.html
@@ -1,9 +1,14 @@
+<h2 class="page-header">Your profile</h2>
+
 <!-- Check if user has been logged -->
 
 <div *ngIf="user">
-    <h2 class="page-header">{{user.name}}</h2>
+    <h3 class="page-header">{{user.name}}</h3>
     <ul class="list-group">
         <li class="list-group-item">Username : {{user.username}}</li>
         <li class="list-group-item">Email : {{user.email}}</li>
     </ul>
 </div>
+
+<button type="button" class="btn btn-primary" value="Change your password"
+routerLink="/password">Change your password</button>
