--- a/meanautapp/angular-src/src/app/components/home/home.component.html
+++ b/meanautapp/angular-src/src/app/components/home/home.component.html
@@ -10,14 +10,33 @@
     <div class="col-md-4">
       <h4>Categories</h4>
       <p>Select the category of your champ</p>
+      <a class="btn btn-default">light flyweight - 108 pounds</a>
+      <a class="btn btn-default">flyweight - 112 pounds</a>
+      <a class="btn btn-default">bantamweight - 118 pounds</a>
+      <a class="btn btn-default">super bantamweight - 122 pounds</a>
+      <a class="btn btn-default">featherweight - 126 pounds</a>
+      <a class="btn btn-default">super featherweight - 130 pounds</a>
+      <a class="btn btn-default">lightweight - 135 pounds</a>
+      <a class="btn btn-default">super lightweight - 140 pounds</a>
+      <a class="btn btn-default">welterweight - 147 pounds</a>
+      <a class="btn btn-default">super welterweight - 154 pounds</a>
+      <a class="btn btn-default">middleweight - 160 pounds</a>
+      <a class="btn btn-default">super middleweight - 168 pounds</a>
+      <a class="btn btn-default">light heavyweight - 175 pounds</a>
+      <a class="btn btn-default">cruiserweight - 200 pounds</a>
+      <a class="btn btn-default">heavyweight - unlimited</a>
     </div>
     <div class="col-md-4">
       <h4>News</h4>
       <p>See last news there</p>
+      <li>Kambosos On Haney: “He’ll Definitely Be Running Once He Feels The Power”</li>
     </div>
     <div class="col-md-4">
       <h4>Next fights</h4>
       <p>Check here the next soon fights</p>
+      <div>SATURDAY 21ST MAY</div>
+      <li>MAYWEATHER JR (US) vs MOORE (US)</li>
+      <li>BUATSI (UK) vs RICHARDS (UK)</li>
     </div>
   </div>
   
